--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>Crime Dashboard by Nitin Verma</h3>
+                <h3>Crime Dashboard by MANJOT SINGH</h3>
             </div>
 
             <ul class="list-unstyled components">
